[package]
name = "g910_handler"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]

[dependencies]
libusb = { git = "https://github.com/oberien/libusb-rs", rev = "881d54ef4ffa639132ac42d0cdc6fe3a97135a49" }
g910 = { git = "https://github.com/oberien/logitech-g910-rs", rev = "master" }
uinput = "0.1.2"
