[package]
name = "g910_handler"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]

[dependencies]
libusb = { git = "https://github.com/oberien/libusb-rs", rev = "060be5045140f4625f7450b234af473e877908de" }
g910 = { git = "https://github.com/oberien/logitech-g910-rs", rev = "master" }
uinput = "0.1.2"
rand = "0.3.14"

